--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/futurechan/node_acl-mem-regexp/issues"
   },
-  "homepage": "https://github.com/futurechan/node_acl-mem-regexp"
+  "homepage": "https://github.com/futurechan/node_acl-mem-regexp",
+  "dependencies": {
+    "lodash": "^2.4.1"
+  }
 }
